fixed horizontal overlapping

--- a/monaco-client/css/style.css
+++ b/monaco-client/css/style.css
@@ -37,7 +37,7 @@ body {
     overflow: hidden;
     background-color: #eee;
     position: absolute;
-    width: 48.9%;
+    width: 49.6%;
     height: 49.5%;
     text-align: left;
     padding: 0;
@@ -52,14 +52,14 @@ body {
 .panel.rule {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-    left: 15px;
+    left: 0px;
     top: 0px;
     height: 100%;
 }
 
 .panel.code {
     border-top-right-radius: 10px;
-    right: 15px;
+    right: 0px;
     top: 0px;
 }
 
@@ -67,7 +67,7 @@ body {
     border-bottom-right-radius: 10px;
     background-color: #eee;
     bottom: 0px;
-    right: 15px;
+    right: 0px;
 }
 
 .warningIcon {
